--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-Django==1.11.7
-django-decouple==2.1
-django-widget-tweaks==1.4.1
-pkg-resources==0.0.0
-pytz==2017.3
+diff-match-patch==20121119
+Django==2.0.4
+django-import-export==1.0.0
+django-tables2==1.21.2
+django-widget-tweaks==1.4.2
+et-xmlfile==1.0.1
+jdcal==1.4
+odfpy==1.3.6
+openpyxl==2.5.3
+python-decouple==3.1
+pytz==2018.4
+PyYAML==3.12
+tablib==0.12.1
+unicodecsv==0.14.1
+xlrd==1.1.0
+xlwt==1.3.0
